logs/tracking/build.make.953.log.stderr
In file included from /usr/include/pcl-1.7/pcl/visualization/pcl_visualizer.h:52:0,
                 from /usr/include/pcl-1.7/pcl/visualization/cloud_viewer.h:39,
                 from /home/dexheimere/thesis_ws/src/tracking/include/tracking/PointCloudMap.h:10,
                 from /home/dexheimere/thesis_ws/src/tracking/include/tracking/SparseAlignment.h:13,
                 from /home/dexheimere/thesis_ws/src/tracking/src/SparseAlignment.cpp:1:
/usr/include/pcl-1.7/pcl/visualization/area_picking_event.h: In member function ‘bool pcl::visualization::AreaPickingEvent::getPointsIndices(std::vector<int>&) const’:
/usr/include/pcl-1.7/pcl/visualization/area_picking_event.h:64:30: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
           if (nb_points_ == -1)
                              ^
In file included from /usr/include/pcl-1.7/pcl/visualization/pcl_visualizer.h:52:0,
                 from /usr/include/pcl-1.7/pcl/visualization/cloud_viewer.h:39,
                 from /home/dexheimere/thesis_ws/src/tracking/include/tracking/PointCloudMap.h:10,
                 from /home/dexheimere/thesis_ws/src/tracking/include/tracking/SparseAlignment.h:13,
                 from /home/dexheimere/thesis_ws/src/tracking/src/main.cpp:20:
/usr/include/pcl-1.7/pcl/visualization/area_picking_event.h: In member function ‘bool pcl::visualization::AreaPickingEvent::getPointsIndices(std::vector<int>&) const’:
/usr/include/pcl-1.7/pcl/visualization/area_picking_event.h:64:30: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
           if (nb_points_ == -1)
                              ^
/home/dexheimere/thesis_ws/src/tracking/src/SparseAlignment.cpp: In constructor ‘ImageAlignment::ImageAlignment(int, int)’:
/home/dexheimere/thesis_ws/src/tracking/src/SparseAlignment.cpp:30:2: error: ‘need_new_keyframe’ was not declared in this scope
  need_new_keyframe = false;
  ^
/home/dexheimere/thesis_ws/src/tracking/src/SparseAlignment.cpp: In member function ‘void ImageAlignment::setKeyframe(std::vector<cv::Mat>&, std::vector<cv::Mat>&)’:
/home/dexheimere/thesis_ws/src/tracking/src/SparseAlignment.cpp:85:2: error: ‘need_new_keyframe’ was not declared in this scope
  need_new_keyframe = false;
  ^
/home/dexheimere/thesis_ws/src/tracking/src/main.cpp: In function ‘int main()’:
/home/dexheimere/thesis_ws/src/tracking/src/main.cpp:89:25: error: ‘pixelSel’ was not declared in this scope
       pixel_coord_ref = pixelSel.selectPixels(img_pyramid_ref[0],grad_mag);
                         ^
/home/dexheimere/thesis_ws/src/tracking/src/main.cpp:164:25: error: ‘pixelSel’ was not declared in this scope
       pixel_coord_ref = pixelSel.selectPixels(img_pyramid_ref[0],grad_mag);
                         ^
/home/dexheimere/thesis_ws/src/tracking/src/SparseAlignment.cpp: In member function ‘Eigen::Matrix<float, 8, 1> ImageAlignment::optimize(Eigen::Matrix<float, 8, 1>, cv::Mat&, cv::Mat&, cv::Mat&, cv::Mat&, cv::Mat&, Eigen::MatrixXf, Eigen::Matrix3f, cv::Mat&)’:
/home/dexheimere/thesis_ws/src/tracking/src/SparseAlignment.cpp:180:8: warning: unused variable ‘e_init_norm’ [-Wunused-variable]
  float e_init_norm = 0;
        ^
/home/dexheimere/thesis_ws/src/tracking/src/SparseAlignment.cpp: In member function ‘Eigen::Matrix<float, 8, 1> ImageAlignment::optimize2(Eigen::Matrix<float, 8, 1>, cv::Mat&, int)’:
/home/dexheimere/thesis_ws/src/tracking/src/SparseAlignment.cpp:334:4: error: ‘need_new_keyframe’ was not declared in this scope
    need_new_keyframe = true;
    ^
/home/dexheimere/thesis_ws/src/tracking/src/SparseAlignment.cpp:277:8: warning: unused variable ‘e_init_norm’ [-Wunused-variable]
  float e_init_norm = 0;
        ^
make[2]: *** [CMakeFiles/tracking.dir/src/main.cpp.o] Error 1
make[2]: *** Waiting for unfinished jobs....
make[2]: *** [CMakeFiles/tracking.dir/src/SparseAlignment.cpp.o] Error 1
make[1]: *** [CMakeFiles/tracking.dir/all] Error 2
make: *** [all] Error 2
